# twey.io

./: .gitignore  .gitmodules  Makefile  flake.nix  index.html  shell.nix  site.hs  site2021.cabal  stack.yaml
adoc-templates/: block_admonition.html.erb  block_preamble.html.erb  inline_footnote.html.erb  paragraph.html.erb  section.html.erb
assets/: highlighting.css  initials.css  mathjax.css  scrollspy.js  style.css
assets/EBGaramond/: font.css
drafts/: formulae.html  initials-adoc.adoc  pi-nets.adoc
drafts/for-programmers/: algebraic-effects.adoc  computational-type-theory.adoc  curry-howard.adoc  dependent-types.adoc  homotopy-type-theory.adoc
new-layout/: index.html
nix/: hix.nix
nix/asciidoctor/: Gemfile  default.nix  gemset.nix
posts/: 2015-08-12-spqr.markdown  2015-10-07-rosa-rosa-rosam.markdown  2015-11-28-carpe-diem.markdown  2015-12-07-tu-quoque.markdown  formulae.html  hello-adoc.adoc  initials-adoc.adoc  interaction-nets.adoc  internal-data-structures.adoc  lorem-ipsum.adoc  lorem-ipsum.html  metaphor.adoc  nix-patterns.adoc  nondeterminism.adoc  pi-nets.adoc  site-construction.adoc  variables.adoc
posts/for-programmers/: algebraic-effects.adoc  computational-type-theory.adoc  curry-howard.adoc  dependent-types.adoc  homotopy-type-theory.adoc  lambda-calculus.adoc  linear-types.adoc
posts/llm-programming/: index.adoc
posts/nix-patterns/: inputs-and-outputs.adoc
posts/rust/: boxed-futures.adoc
posts/tech-pitches/: linear-types.adoc
templates/: archive.html  default.html  index.html  logo.html  page.html  sidebar.html  toc.html
(+3 files in other folders)
