name:               site2021
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , containers == 0.6.*
                  , filepath == 1.4.*
                  , hakyll == 4.16.*
                  , tagsoup == 0.14.*
                  , time >= 1.9.3
                  , multimap >= 1.2.1
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
